--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ffmpeg-static": "^4.2.7",
     "fs": "0.0.1-security",
     "giphy-js-sdk-core": "^1.0.6",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.18",
     "opus": "0.0.0",
