--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
+    "better-sqlite3": "^7.1.2",
+    "colors": "^1.4.0",
     "discord-ytdl-core": "^5.0.0",
     "discord.js": "^12.5.1",
     "discord.js-commando": "git+https://github.com/discordjs/commando.git",
@@ -19,6 +21,8 @@
     "mongoose": "^5.11.18",
     "opus": "0.0.0",
     "opusscript": "0.0.7",
+    "quick.db": "^7.0.0-b22",
+    "quickmongo": "^3.0.2",
     "random-puppy": "^1.1.0",
     "yt-search": "^2.3.0",
     "ytdl-core": "^3.4.2"
