--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kekbot",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "Discord kekbot#5882",
   "main": "index.js",
   "dependencies": {
@@ -9,7 +9,7 @@
     "colors": "^1.4.0",
     "discord-ytdl-core": "^5.0.0",
     "discord.js": "^12.5.1",
-    "discord.js-commando": "git+https://github.com/discordjs/commando.git",
+    "discord.js-commando": "^0.12.2",
     "distube": "^2.8.8",
     "erela.js": "^2.3.2",
     "eslint": "^7.12.0",
