--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "node-fetch": "^2.6.1",
     "opus": "0.0.0",
     "opusscript": "0.0.7",
+    "quick.db": "^7.1.3",
     "quickmongo": "^3.0.2",
     "random-puppy": "^1.1.0",
-    "yt-search": "^2.3.0",
+    "yt-search": "^2.8.0",
     "ytdl-core": "^3.4.2"
   },
   "devDependencies": {},
