--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-fetch": "^2.6.1",
     "opus": "0.0.0",
     "opusscript": "0.0.7",
+    "popcat-wrapper": "^1.3.12",
     "quick.db": "^7.1.3",
     "quickmongo": "^3.0.2",
     "random-puppy": "^1.1.0",
