--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "better-sqlite3": "^7.1.2",
     "canvas": "^2.7.0",
     "colors": "^1.4.0",
+    "discord-buttons": "^4.0.0",
     "discord-ytdl-core": "^5.0.0",
     "discord.js": "^12.5.1",
     "discord.js-commando": "^0.12.2",
@@ -18,10 +19,12 @@
     "ffmpeg-static": "^4.2.7",
     "fs": "0.0.1-security",
     "giphy-js-sdk-core": "^1.0.6",
+    "images-scraper": "^6.3.0",
     "moment": "^2.29.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.18",
     "node-fetch": "^2.6.1",
+    "nuggies": "^1.2.6",
     "opus": "0.0.0",
     "opusscript": "0.0.7",
     "popcat-wrapper": "^1.3.12",
