--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-node_modules
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Bower dependency directory (https://bower.io/)
+bower_components
+
+# dotenv environment variables file
+.env
+.env.test
+.env.production
