--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
 		"discord.js-commando": "^0.12.2",
 		"distube": "^2.8.8",
 		"erela.js": "^2.3.2",
-		"eslint": "^7.12.0",
 		"ffmpeg-static": "^4.2.7",
 		"fs": "0.0.1-security",
 		"giphy-js-sdk-core": "^1.0.6",
@@ -34,9 +33,14 @@
 		"yt-search": "^2.8.0",
 		"ytdl-core": "^3.4.2"
 	},
-	"devDependencies": {},
+	"devDependencies": {
+		"eslint": "^7.31.0"
+	},
 	"keywords": [
-		"kek", "discord-bot", "discord.js", "javascript"
+		"kek",
+		"discord-bot",
+		"discord.js",
+		"javascript"
 	],
 	"author": "Mathusan (deku_prime#1475)",
 	"license": "MIT",
