--- a/botconfig.json
+++ b/botconfig.json
@@ -1,5 +1,6 @@
 {
 	"prefix":"kek",
 	"Gipheyapikey":"gxviWT9uoJsJTSJxDzZua1bEERWY7NfM",
-	"Tenorapikey":"71I2CJQNB29P"
+	"Tenorapikey":"71I2CJQNB29P",
+	"testbot":"NzM2NTQ3Mjc5MzIxNjk0MjA5.XxwZGw.LcUEbrZOHciVcHac2OhUnGuAvRc"
 }    
