--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "kekbot",
-	"version": "3.4.0",
+	"version": "3.5.0",
 	"description": "Discord kekbot#5882",
 	"main": "src/index.js",
 	"dependencies": {
@@ -30,6 +30,7 @@
 		"quick.db": "^7.1.3",
 		"quickmongo": "^3.0.2",
 		"random-puppy": "^1.1.0",
+		"weather-js": "^2.0.0",
 		"yt-search": "^2.8.0",
 		"ytdl-core": "^3.4.2"
 	},
