--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "3.6.0",
   "description": "A discord membot",
   "main": "index.js",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "abbrev": "^1.1.1",
     "abort-controller": "^3.0.0",
@@ -652,8 +655,6 @@
     "zero-fill": "^2.2.4",
     "yt-search": "^2.8.0"
   },
-
-  "engines" : { "node" : ">=16.6.1" },
   
   "devDependencies": {},
   "scripts": {
