--- a/package.json
+++ b/package.json
@@ -1,52 +1,31 @@
 {
 	"name": "kekbot",
-	"version": "3.5.0",
-	"description": "Discord kekbot#5882",
+	"version": "3.6.1",
+	"description": "",
 	"main": "src/index.js",
-	"dependencies": {
-		"@discordjs/opus": "^0.3.3",
-		"axios": "^0.21.1",
-		"better-sqlite3": "^7.1.2",
-		"canvas": "^2.7.0",
-		"colors": "^1.4.0",
-		"discord-buttons": "^4.0.0",
-		"discord-ytdl-core": "^5.0.0",
-		"discord.js": "^12.5.1",
-		"discord.js-commando": "^0.12.2",
-		"distube": "^2.8.8",
-		"erela.js": "^2.3.2",
-		"ffmpeg-static": "^4.2.7",
-		"fs": "0.0.1-security",
-		"giphy-js-sdk-core": "^1.0.6",
-		"images-scraper": "^6.3.0",
-		"moment": "^2.29.1",
-		"mongodb": "^3.6.4",
-		"mongoose": "^5.11.18",
-		"node-fetch": "^2.6.1",
-		"nuggies": "^1.2.6",
-		"opus": "0.0.0",
-		"opusscript": "0.0.7",
-		"popcat-wrapper": "^1.3.12",
-		"quick.db": "^7.1.3",
-		"quickmongo": "^3.0.2",
-		"random-puppy": "^1.1.0",
-		"weather-js": "^2.0.0",
-		"yt-search": "^2.8.0",
-		"ytdl-core": "^3.4.2"
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"devDependencies": {
-		"eslint": "^7.31.0"
-	},
-	"keywords": [
-		"kek",
-		"discord-bot",
-		"discord.js",
-		"javascript"
-	],
-	"author": "Mathusan (deku_prime#1475)",
-	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "kekbot"
+		"url": "git+https://github.com/bagelwastaken/kekbot.git"
+	},
+	"author": "Mathusan (deku_prime#1475)",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/bagelwastaken/kekbot/issues"
+	},
+	"homepage": "https://github.com/bagelwastaken/kekbot#readme",
+	"dependencies": {
+		"discord.js": "^13.0.1",
+		"discord.js-ghost-ping": "^2.0.3",
+		"got": "^11.8.2",
+		"mongoose": "^5.13.6",
+		"node-fetch": "^2.6.1",
+		"popcat-wrapper": "^1.3.15",
+		"quick.db": "^7.1.3"
+	},
+	"devDependencies": {
+		"eslint": "^7.32.0"
 	}
 }
