--- a/package.json
+++ b/package.json
@@ -2,24 +2,27 @@
 	"name": "kekbot",
 	"version": "3.6.1",
 	"description": "",
+	"type": "module",
 	"main": "src/index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "node --experimental-json-modules ."
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/bagelwastaken/kekbot.git"
 	},
-	"author": "Mathusan (deku_prime#1475)",
+	"author": "Mathusan (bagel#1475)",
 	"license": "MIT",
 	"bugs": {
 		"url": "https://github.com/bagelwastaken/kekbot/issues"
 	},
 	"homepage": "https://github.com/bagelwastaken/kekbot#readme",
 	"dependencies": {
-		"discord.js": "^13.0.1",
+		"discord.js": "^13.0.0",
 		"discord.js-ghost-ping": "^2.0.3",
+		"dotenv": "^10.0.0",
 		"got": "^11.8.2",
+		"moment": "^2.29.1",
 		"mongoose": "^5.13.6",
 		"node-fetch": "^2.6.1",
 		"popcat-wrapper": "^1.3.15",
