--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "3.6.1",
 	"description": "",
 	"type": "module",
+	"engines": {
+		"node": "16.6"
+	},
 	"main": "src/index.js",
 	"scripts": {
 		"start": "node --experimental-json-modules ."
