--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"mongoose": "^5.13.6",
 		"node-fetch": "^2.6.1",
 		"popcat-wrapper": "^1.3.15",
-		"quick.db": "^7.1.3"
+		"quick.db": "^7.1.3",
+		"weather-js": "^2.0.0"
 	},
 	"devDependencies": {
 		"eslint": "^7.32.0"
