--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
 		"url": "git+https://github.com/bagelwastaken/kekbot.git"
 	},
 	"author": "Mathusan (bagel#1475)",
-	"license": "MIT",
+	"license": "Apache 2.0",
 	"bugs": {
 		"url": "https://github.com/bagelwastaken/kekbot/issues"
 	},
 	"homepage": "https://github.com/bagelwastaken/kekbot#readme",
 	"dependencies": {
+		"@discordjs/rest": "^0.1.0-canary.0",
+		"discord-api-types": "^0.23.1",
 		"discord.js": "^13.1.0",
 		"discord.js-ghost-ping": "^2.0.3",
 		"dotenv": "^10.0.0",
@@ -28,7 +30,7 @@
 		"moment": "^2.29.1",
 		"mongoose": "^5.13.6",
 		"node-fetch": "^2.6.1",
-		"popcat-wrapper": "^1.3.15",
+		"popcat-wrapper": "^1.4.6",
 		"quick.db": "^7.1.3",
 		"weather-js": "^2.0.0"
 	},
