--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "kekbot",
-	"version": "3.7.0",
+	"version": "4.0.0",
 	"description": "",
 	"type": "module",
 	"engines": {
@@ -8,7 +8,7 @@
 	},
 	"main": "src/index.js",
 	"scripts": {
-		"start": "node --experimental-json-modules ."
+		"start": "node ."
 	},
 	"repository": {
 		"type": "git",
@@ -19,22 +19,5 @@
 	"bugs": {
 		"url": "https://github.com/bagelwastaken/kekbot/issues"
 	},
-	"homepage": "https://github.com/bagelwastaken/kekbot#readme",
-	"dependencies": {
-		"@discordjs/rest": "^0.1.0-canary.0",
-		"discord-api-types": "^0.23.1",
-		"discord.js": "^13.1.0",
-		"discord.js-ghost-ping": "^2.0.3",
-		"dotenv": "^10.0.0",
-		"got": "^11.8.2",
-		"moment": "^2.29.1",
-		"mongoose": "^5.13.6",
-		"node-fetch": "^2.6.1",
-		"popcat-wrapper": "^1.4.6",
-		"quick.db": "^7.1.3",
-		"weather-js": "^2.0.0"
-	},
-	"devDependencies": {
-		"eslint": "^8.3.0"
-	}
+	"homepage": "https://github.com/bagelwastaken/kekbot#readme"
 }
