--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
 	"bugs": {
 		"url": "https://github.com/bagelwastaken/kekbot/issues"
 	},
-	"homepage": "https://github.com/bagelwastaken/kekbot#readme"
+	"homepage": "https://github.com/bagelwastaken/kekbot#readme",
+	"dependencies": {
+		"discord.js": "^13.3.1",
+		"dotenv": "^10.0.0"
+	}
 }
