--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 	},
 	"homepage": "https://github.com/bagelwastaken/kekbot#readme",
 	"dependencies": {
-		"discord.js": "^13.3.1",
-		"dotenv": "^10.0.0"
+		"discord.js": "^13.4.0",
+		"dotenv": "^10.0.0",
+		"got": "^12.0.0"
 	}
 }
