--- a/example.env
+++ b/example.env
@@ -1,3 +1,9 @@
-# I forgot what liam said here before buuuut
-# Should you need to use a very very very important token or something but can't mention it in the code
-# Ask Bagel#1475 because only he has access to the heroku dyno 
+# Create a .env file with the following format.
+# Follow the links shown above each variable and add the 
+# required information in order to for the bot to work.
+
+# https://discord.com/developers/applications/CLIENT_ID/bot
+Token = ""
+
+# Discord Webhook URLS
+ReportWebhook = ""
