--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"homepage": "https://github.com/bagelwastaken/kekbot#readme",
 	"dependencies": {
 		"discord.js": "^13.5.0",
+		"discord.js-ghost-ping": "^2.0.3",
 		"dotenv": "^10.0.0",
 		"got": "^12.0.0"
 	},
