--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"discord.js": "^13.5.0",
 		"discord.js-ghost-ping": "^2.1.0",
 		"dotenv": "^10.0.0",
-		"got": "^12.0.0"
+		"got": "^12.0.0",
+		"moment": "^2.29.1"
 	},
 	"devDependencies": {
 		"eslint": "^8.6.0"
