--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "kekbot",
-	"version": "4.0.4",
+	"version": "4.1.0",
 	"description": "",
 	"engines": {
 		"node": "16.6"
@@ -24,7 +24,8 @@
 		"discord.js-ghost-ping": "^2.1.2",
 		"dotenv": "^10.0.0",
 		"got": "^12.0.0",
-		"moment": "^2.29.1"
+		"moment": "^2.29.1",
+		"weather-js": "^2.0.0"
 	},
 	"devDependencies": {
 		"eslint": "^8.6.0"
