--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"homepage": "https://github.com/bagelwastaken/kekbot#readme",
 	"dependencies": {
+		"@discordjs/builders": "^0.12.0",
 		"discord.js": "^13.6.0",
 		"discord.js-ghost-ping": "^2.1.4",
 		"dotenv": "^10.0.0",
