--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"discord.js": "^13.6.0",
 		"discord.js-ghost-ping": "^2.1.4",
 		"dotenv": "^10.0.0",
+		"express": "^4.18.1",
 		"got": "^12.0.0",
 		"moment": "^2.29.1",
 		"weather-js": "^2.0.0"
