--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -16,7 +16,7 @@ on:
     branches: [ "master" ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "development" ]
+    branches: [ "Development" ]
   schedule:
     - cron: '26 10 * * 2'
 
