--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 	},
 	"homepage": "https://github.com/bagelwastaken/kekbot#readme",
 	"dependencies": {
+		"@discordjs/builders": "^1.4.0",
+		"axios": "^1.3.4",
 		"discord.js": "^14.7.1",
 		"discord.js-ghost-ping": "^3.0.0",
 		"dotenv": "^10.0.0",
